k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ether
  name: ether-website
  labels:
    app: ether-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ether-website
  template:
    metadata:
      labels:
        app: ether-website
    spec:
      nodeSelector:
        role: worker
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ether-website
          image: ghcr.io/ether-paris/ether-website:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
